Next release

  Docs

   - Documented URL dispatch better in narrative form.

  Bug fixes

   - Routes URL dispatch did not have access to the WSGI environment,
     so conditions such as method=GET did not work.

0.3.7 (09/09/2008)

  Features
 
  - Add compatibility with z3c.pt 1.0a7+ (z3c.pt became a namespace package).

  Bug fixes

  - ``repoze.bfg.traversal.find_model`` function did not function
    properly.

0.3.6 (09/04/2008)

  Features

  - Add startup process docs.

  - Allow configuration cache to be bypassed by actions which include
    special "uncacheable" discriminators (for actions that have
    variable results).

  Bug Fixes

  - Move core repoze.bfg ZCML into a ``repoze.bfg.includes`` package
    so we can use repoze.bfg better as a namespace package.  Adjust
    the code generator to use it.  We've left around the
    ``configure.zcml`` in the repoze.bfg package directly so as not to
    break older apps.

  - When a zcml application registry cache was unpickled, and it
    contained a reference to an object that no longer existed (such as
    a view), bfg would not start properly.

0.3.5 (09/01/2008)

  Features

  - Event notification is issued after application is created and
    configured (``IWSGIApplicationCreatedEvent``).

  - New API module: ``repoze.bfg.view``.  This module contains the
    functions named ``render_view_to_response``,
    ``render_view_to_iterable``, ``render_view`` and ``is_response``,
    which are documented in the API docs.  These features aid
    programmatic (non-server-driven) view execution.

0.3.4 (08/28/2008)

  Backwards incompatibilities

  - Make ``repoze.bfg`` a namespace package so we can allow folks to
    create subpackages (e.g. ``repoze.bfg.otherthing``) within
    separate eggs.  This is a backwards incompatible change which
    makes it impossible to import "make_app" and "get_options" from
    the ``repoze.bfg`` module directly.  This change will break all